--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,19 +2,28 @@ body {
     background-image: 
         url(../images/sport_background.jpg);
         background-size: cover;
+    font-family: 'Archivo Black', sans-serif;
+    
 }
 
 #addButton {
-    background-color: #555555;
+    background-color: white;
     margin: 20px;
     padding: 5px;
     border-radius: 4px;
+    border-color: #555555;
 
+}
+
+#sport-input {
+    border-radius: 4px;
+    border-color: #555555;
 
 }
 
 #addSport {
-    background-color: #555555;
+    background-color: white;
+    border-color: #555555;
     margin: 20px;
     border-radius: 4px;
 
